--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "cypress": "^3.1.0"
   }
 }
